--- a/index.html
+++ b/index.html
@@ -8,27 +8,6 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="logo-box">
-            <div class="inner-logo-box">
-                <div class="logo-img"></div>
-                <div class="logo-up-text">neighbourly</div>
-                <div class="logo-down-text">from your hearts to your neighbours</div>
-            </div>        
-        </div>
-        <div class="signin-box">
-            <div class="inner-signin">
-                <div class="signin-text">Sign in</div>
-                <div class="crt-acc-text">Create your account</div>
-                <form action="signin.php" class="signin-form">
-                    <input class="form-input" type="text" placeholder="Username" id="username">
-                    <input class="form-input" type="text" placeholder="email" id="email">
-                    <input class="form-input" type="password" placeholder="Password" id="password">
-                    <input class="form-input" type="text" placeholder="Phone number" id="phone-number">
-                    <button class="submit-button">Sign in</button>
-                </form>
-            </div>
-        </div>
-    </div>
+    <button href="login.php">Go to login , nothing here right now!!!!</button>
 </body>
 </html>
