--- a/post.html
+++ b/post.html
@@ -11,28 +11,7 @@
 
 <body>
 
-    <div class="nav-bar">
-        <div class="no-collapse">
-            <div>
-                <img src="/logo.png" class="logo" alt="logo">
-            </div>
-            <a class="nav-share" href="/post.php">Share</a>
-            <a class="nav-explore" href="/items.php">Explore</a>
-            <div class="search-bar">
-                <form class="search-bar-inner" action="search_results.php" method="get">
-                    <input type="text" placeholder="Search items" class="search-box">
-                    <button class="search-button" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                </form>
-            </div>
-        </div>
-        <div class="myCollapse">
-            <a class="nav-about" href="/aboutUs.php">About us</a>
-            <a class="nav-contact" href="/contactUs.php">Contact Us</a>
-            <a class="nav-profile" href="/user.php">
-                <img src="/profile.png" class="nav-profile" alt="">
-            </a>
-        </div>
-    </div>
+    <?php require './includes/navbar.php'; ?>
 
     <div class="container">
         <h1 class="title">CREATE POST</h1>
